[tool.poetry]
name = "highscore-micro-two"
version = "0.1.0"
description = "A FastAPI ASGI microservice to query/update a high score list."
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pysnooper = "^1.1.1"
flake8 = "^6.0.0"
yapf = "^0.40.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
