[tool.poetry]
name = "highscore-micro-two"
version = "0.1.0"
description = "A FastAPI ASGI microservice to create/query a high score list using SQLModel. Backend is a PostgreSQL database deployed on the ElephantSQL cloud."
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
sqlmodel = "^0.0.6"
alembic = "^1.4.2"
pydantic = "^1.4"
sqlalchemy = "^1.3"
greenlet = { git = "https://github.com/python-greenlet/greenlet.git", tag = "3.0.0" }
requests = "^2.23.0"
itsdangerous = "^2.1.2"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.8"
asyncpg = "^0.28.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
